# dioxus-spa

./: Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json  tailwind.config.js
src/: main.rs
