[package]
name = "dioxus-spa"
version = "0.1.0"
authors = ["Roland Brand <rolandbrand11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
manganis = "0.2.2"
serde = { version = "1.0.197", features = ["derive"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
